--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -16,11 +16,13 @@
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#services">career_stack</a>
-
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#contact">stackers</a>
+          <a class="nav-link js-scroll-trigger" href="#services">stackers</a>
         </li>
+
+
+
         <li class="nav-item">
           <% if user_signed_in? %>
             <%= current_user.nickname if current_user%>님 환영합니다.
@@ -28,7 +30,9 @@
             <%if current_user.admin?%>
             <%= link_to '관리자_홈', admin_users_path,class: 'mdl-navigation__link'%>
             <%end%>
+            <%= link_to 'My Stack', main_mypage_path, class: "nav-link js-scroll-trigger"%>
             <%= link_to '로그아웃', destroy_user_session_path, method: :delete, class: "nav-link js-scroll-trigger"%>
+
           <% else %>
             <%= link_to '로그인', new_user_session_path, class: "nav-link js-scroll-trigger"%>
           <% end %>
