--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,5 +1,5 @@
 
-<header class="bg-primary text-white">
+<header class="bg-white text-white">
   <div class="container text-center">
     <div class="justify-content-center">
       <!-- <form class="my-2 my-lg-0"> -->
